<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/id_new_advertisement"
        android:title="@string/bottom_nav_new_advertisement"
        android:icon="@drawable/ic_new_advertisement"
        android:orderInCategory="400" />
    <item
        android:id="@+id/id_my_ads"
        android:title="@string/bottom_nav_mine_ads"
        android:icon="@drawable/ic_mine_ads"
        android:orderInCategory="300" />
    <item
        android:id="@+id/id_favs"
        android:title="@string/bottom_nav_favourites"
        android:icon="@drawable/ic_favorite_normal"
        android:orderInCategory="200" />
    <item
        android:id="@+id/id_home"
        android:title="@string/bottom_nav_home"
        android:icon="@drawable/ic_home"
        android:orderInCategory="100" />
</menu>